<resources>
    <string name="app_name">KONFY</string>

    <string name="bilim">BİLİM</string>
    <string name="akademik">AKADEMİK</string>
    <string name="yazılım">YAZILIM</string>
    <string name="spor">SPOR</string>
    <string name="all">GENEL</string>

    <string name="menu_anasayfa">ANASAYFA</string>
    <string name="menu_arama">ARAMA</string>
    <string name="menu_konfy">TÜM KONFYRANSLAR</string>
    <string name="menu_add">KONFYRANS OLUŞTUR</string>

    <string name="menu_duzenle">Bilgileri Düzenle</string>
    <string name="menu_cıkıs">Çıkış Yap</string>


    <string name="featured_locations">All Featured</string>
    <string name="featured_locations_desc">ALİİİ VEELİİİ</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">View All</string>
    <string name="title_activity_denemem">denemem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


</resources>
